--- a/Digital Piano/Digital Piano.csproj
+++ b/Digital Piano/Digital Piano.csproj
@@ -11,6 +11,17 @@
 
   <ItemGroup>
     <PackageReference Include="NAudio" Version="2.2.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\Melodies\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="KeyMap.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
